# merry-cRUSTmas

./: Cargo.toml  README.md
2022/day_01/src/: main.rs
2022/day_03/src/: main.rs
2023/: .gitignore  Cargo.toml  benchmarks.txt  justfile
2023/all-days/: Cargo.toml
2023/day-01/: Cargo.toml
2023/day-01/benches/: benchmark.rs
2023/day-01/src/: part1.rs  part2.rs
2023/day-02/: Cargo.toml
2023/day-02/benches/: benchmark.rs
2023/day-02/src/: part1.rs  part2.rs
2023/day-03/: Cargo.toml
2023/day-03/benches/: benchmark.rs
2023/day-03/src/: lib.rs  part1.rs  part2.rs  schematic.rs
2023/day-04/: Cargo.toml
2023/day-04/benches/: benchmark.rs
2023/day-04/src/: part1.rs  part2.rs
2023/day-05/: Cargo.toml
2023/day-05/benches/: benchmark.rs
2023/day-05/src/: lib.rs  part1.rs  part2.rs  part2_dumb.rs
2023/day-06/: Cargo.toml
2023/day-06/benches/: benchmark.rs
2023/day-06/src/: lib.rs  part1.rs  part1_brute.rs  part1_quadratic.rs  part2.rs  part2_brute.rs  part2_quadratic.rs
2023/day-07/: Cargo.toml
2023/day-07/benches/: benchmark.rs
2023/day-07/src/: part1.rs  part2.rs
2023/day-08/: Cargo.toml
2023/day-08/benches/: benchmark.rs
2023/day-08/src/: lib.rs  part1.rs  part1_hash.rs  part2.rs  part2_hash.rs
2023/day-09/: Cargo.toml
2023/day-09/benches/: benchmark.rs
2023/day-09/src/: lib.rs  part1.rs  part1_pascal.rs  part2.rs  part2_pascal.rs  pascal.rs
2023/day-10/: Cargo.toml
2023/day-10/benches/: benchmark.rs
2023/day-10/src/: lib.rs  part1.rs  part1_no_map.rs  part2.rs  part2_no_map.rs
2023/day-11/: Cargo.toml
2023/day-11/benches/: benchmark.rs
2023/day-11/src/: lib.rs  part1.rs  part2.rs  part2_parallel.rs
2023/day-12/: Cargo.toml
2023/day-12/benches/: benchmark.rs
2023/day-12/src/: part1.rs  part2.rs
2023/day-13/: Cargo.toml
2023/day-13/benches/: benchmark.rs
2023/day-13/src/: lib.rs  part1.rs  part1_hash.rs  part2.rs  part2_hash.rs
2023/day-14/: Cargo.toml
2023/day-15/: Cargo.toml
2023/day-16/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-17/benches/: benchmark.rs
2023/day-17/src/: part1.rs  part2.rs
2023/day-18/: Cargo.toml
2023/day-18/benches/: benchmark.rs
2023/day-18/src/: part1.rs  part2.rs
2023/day-19/: Cargo.toml
2023/day-19/benches/: benchmark.rs
2023/day-19/src/: part1.rs  part2.rs
2023/day-20/: Cargo.toml
2023/day-21/: Cargo.toml
2023/day-22/: Cargo.toml
2023/day-23/: Cargo.toml
2023/day-24/: Cargo.toml
2023/day-25/: Cargo.toml
2023/day-25/benches/: benchmark.rs
2023/template/: Cargo.toml
2024/: .gitignore  Cargo.toml  benchmarks.txt
2024/all-days/: Cargo.toml
2024/day-01/: Cargo.toml
2024/day-02/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-03/src/: part1.rs  part2.rs
2024/template/: Cargo.toml
day_02/src/: main.rs
day_03/src/: main.rs
day_04/src/: main.rs
(+40 files in other folders)
