[package]
name = "day-17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = { workspace = true }
hashbrown = "0.14"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-17-bench"
path = "benches/benchmark.rs"
harness = false

[lib]
bench = false

[[bin]]
name = "part1"
bench = false

[[bin]]
name = "part2"
bench = false
