[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = { workspace = true }
regex = { workspace = true } 

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-03-bench"
path = "benches/benchmark.rs"
harness = false

[lib]
bench = false

[[bin]]
name = "part1"
bench = false

[[bin]]
name = "part2"
bench = false
